tests/bad/enum_call_value.oc
/// fail: Unnecessary empty constructor for Variable::Integer, no fields expected

enum Variable {
    Integer
    IntLiteral
    Float
    String
}

def main() {
    let x = Variable::Integer()
}